<resources>
    <string name="app_name">Dreamy</string>
    <string name="daydream_name">Dreamy</string>
    <string name="dreamy_settings">Dreamy Einstellungen</string>
    <string name="unlock_on_time_click">Bei Tippen auf die Uhrzeit aufwecken</string>
    <string name="displayNotifications">Benachrichtigungen anzeigen</string>
    <string name="requestNotificationAccessMsg">Zugriff auf Benachrichtigungen muss gewährt werden</string>
    <string name="displayBatteryStatus">Zeige Akkustand</string>
    <string name="displayWifiStatus">Zeige WLAN Status</string>
    <string name="displayCarrierName">Anbieternamen anzeigen</string>
    <string name="notificatoinsVisibility">Helligkeit der Benachrichtigungen</string>
    <string name="screen_brightness">Bildschirmhelligkeit</string>
    <string name="connectionType">Starten bei Verbindung mit</string>
    <string name="connectionTypeCharger">Ladegerät</string>
    <string name="connectionTypePC">PC (USB)</string>
    <string name="connectionTypeAlways">Immer</string>
    <string name="percent">%d%%</string>
    <string name="daydream_disabled">Daydream ist nicht aktiv. Um Dreamy zu verwenden, muss Daydream aktiviert und Dreamy ausgewählt werden.</string>
    <string name="daydream_not_selected">Dreamy ist nicht als Daydream-App ausgewählt. Das kannst du in den Einstellungen ändern.</string>
    <string name="go_to_daydream_settings">Daydream-Einstellungen öffnen</string>
    <string name="dismiss">Mir doch egal</string>
    <string name="notificationContent">Inhalt der Benach&#173;richtigung&#173;en</string>
    <string name="showEverything">Alles</string>
    <string name="showNameOfTheApp">Name der App</string>
    <string name="showTitle">Titel</string>
    <string name="start_daydream">Daydream starten</string>
    <string name="general">Allgemeines</string>
    <string name="notifications">Benachrichtigungen</string>
    <string name="device_status">Gerätestatus</string>
    <string name="color_of_time">Farbe der Uhrzeit</string>
    <string name="color_device_status">Farbe der Geräteinformationen</string>
    <string name="background_color">Hintergrundfarbe</string>
    <string name="font_color">Schriftfarbe</string>
    <string name="choose_color">Farbe auswählen</string>
    <string name="general_daydream_settings">Allgemeine Daydream Einstellungen</string>
    <string name="animated">Animiert</string>
    <string name="digital">Digital</string>
    <string name="clock_style">Stil der Uhrzeit</string>
</resources>
