<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@android:color/black"
              android:orientation="vertical">


    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="72dp">

            <TextView
                style="@style/SettingsLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="3dip"
                android:text="@string/unlock_on_time_click"
                android:textColor="@android:color/white"/>

            <Space
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1"/>

            <Switch
                android:id="@+id/endOnTimeClickSwitch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|end"
                android:gravity="end"/>

        </TableRow>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dip"
            android:background="#FF212121"/>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="72dp">

            <TextView
                style="@style/SettingsLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="3dip"
                android:text="@string/displayNotifications"
                android:textColor="@android:color/white"/>

            <Space
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1"/>

            <Switch
                android:id="@+id/displayNotificationsSwitch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|end"/>


        </TableRow>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dip"
            android:background="#FF212121"/>


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="72dp">

            <SeekBar
                android:id="@+id/notificationsDimBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:max="100"
                android:minWidth="100dp"/>

            <TextView
                android:id="@+id/notificationDimLabel"
                style="@style/SettingsLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_toStartOf="@id/notificationsDimBar"
                android:padding="3dip"
                android:text="@string/notificatoinsVisibility"
                android:textColor="@android:color/white"/>

        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dip"
            android:background="#FF212121"/>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="72dp">

            <TextView
                style="@style/SettingsLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="3dip"
                android:text="@string/displayBatteryStatus"
                android:textColor="@android:color/white"/>

            <Space
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1"/>

            <Switch
                android:id="@+id/showBatteryStatusSwitch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|end"/>


        </TableRow>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dip"
            android:background="#FF212121"/>


        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="72dp">

            <TextView
                style="@style/SettingsLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="3dip"
                android:text="@string/displayWifiStatus"
                android:textColor="@android:color/white"/>

            <Space
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1"/>

            <Switch
                android:id="@+id/showWifiStatusSwitch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|end"/>

        </TableRow>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dip"
            android:background="#FF212121"/>


        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="72dp">

            <TextView
                style="@style/SettingsLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="3dip"
                android:text="@string/displayCarrierName"
                android:textColor="@android:color/white"/>

            <Space
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1"/>

            <Switch
                android:id="@+id/showCarrierSwitch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|end"/>

        </TableRow>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dip"
            android:background="#FF212121"/>

    </TableLayout>

</LinearLayout>